# RAGF

./: .gitignore  CMakeLists.txt  Doxyfile
bench/nbody/: README.md  gc.go  jruby.rb  nasm.asm
docs/: lang.rb  links.txt  todo.org  vendor.org
docs/dsl/: ruby_dsl.rb
src/c_api/: buf.h  run.h
src/core/: CMakeLists.txt  args.hpp  mem.hpp  reg.hpp  reg_index.hpp  register.hpp  run.c  special_tags.hpp  token.hpp  typedefs.hpp
src/core/arch/x86_64/: code_writer.cpp  code_writer.hpp  constants.hpp  encode.hpp  gpr.hpp  gpr_tags.hpp  ops.cpp  ops.hpp
src/core/arch/x86_64/ops/: add.cpp  bitwise_ops.cpp  cmp.cpp  div_ops.cpp  fn_ops.cpp  jmp_ops.cpp  lea.cpp  misc_ops.cpp  mov.cpp  mul_ops.cpp  ops.cpp  ops.hpp  shift_ops.cpp  stack_ops.cpp  sub.cpp
src/core/asm/: run.asm
src/core/codegen/: code_writer.cpp  code_writer.hpp  numerics.cpp  numerics.hpp
src/core/compile/: compile.cpp  compile.hpp  compiler.cpp  compiler.hpp  constants.hpp  helpers.hpp  numerics.cpp  numerics.hpp  parsers_macro.hpp  resource_manager.cpp  resource_manager.hpp
src/core/io/: binary_value.hpp  code_buf.cpp  code_buf.hpp  code_buf_slice.cpp  code_buf_slice.hpp  token_stream.cpp  token_stream.hpp
src/cxx_dsl/: ops.hpp  regs.hpp  ternary_op.hpp  utils.hpp
src/ruby_api/: asm.rb  assert.rb  binary.rb  die.rb  ragf.rb
src/ruby_api/asm/: arg.rb  encoder.rb  numerics.rb  register.rb  register_provider.rb  statement.rb  token_provider.rb
